fixed overflow-x

--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ html {
 body {
   max-width: 1669px;
   margin: auto;
+  overflow-x: hidden;
 }
 
 .center {
